# qcraft

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
crates/qcraft/: Cargo.toml
crates/qcraft-bench/: Cargo.toml
crates/qcraft-bench/benches/: allocations.rs  compare.rs
crates/qcraft-core/: Cargo.toml
crates/qcraft-core/src/: error.rs
crates/qcraft-core/src/ast/: conditions.rs  custom.rs  ddl.rs  expr.rs  query.rs  value.rs
crates/qcraft-core/src/render/: ctx.rs  mod.rs  renderer.rs
crates/qcraft-postgres/: Cargo.toml
crates/qcraft-postgres/src/: lib.rs
crates/qcraft-postgres/tests/: common.rs  ddl.rs  dml.rs  dql.rs  extensibility.rs  integration.rs  integration_ddl.rs  integration_ddl_ignored_features.rs  integration_dml.rs  integration_dml_ignored_features.rs  integration_dql.rs  integration_dql_ignored_features.rs  integration_dql_unsupported_features.rs  integration_tcl.rs  integration_tcl_ignored_features.rs  tcl.rs
crates/qcraft-postgres/tests/integration/: ddl.rs  ddl_ignored_features.rs  decimal.rs  dml.rs  dml_ignored_features.rs  dml_unsupported_features.rs  dql.rs  dql_ignored_features.rs  dql_unsupported_features.rs  tcl.rs  tcl_ignored_features.rs  tcl_unsupported_features.rs
crates/qcraft-sqlite/: Cargo.toml
crates/qcraft-sqlite/src/: lib.rs
crates/qcraft-sqlite/tests/: common.rs  ddl.rs  dml.rs  dql.rs  integration_ddl.rs  integration_ddl_ignored_features.rs  integration_ddl_unsupported_features.rs  integration_decimal.rs  integration_dml.rs  integration_dml_ignored_features.rs  integration_dml_unsupported_features.rs  integration_dql.rs  integration_dql_ignored_features.rs  integration_dql_unsupported_features.rs  integration_tcl.rs  integration_tcl_ignored_features.rs  integration_tcl_unsupported_features.rs  tcl.rs
crates/qcraft/src/: lib.rs
crates/rquery/: Cargo.toml
crates/rquery-core/: Cargo.toml
crates/rquery-core/src/: lib.rs
crates/rquery-core/src/ast/: common.rs  conditions.rs  custom.rs  ddl.rs  dml.rs  expr.rs  mod.rs  query.rs  tcl.rs  value.rs
crates/rquery-core/src/render/: ctx.rs  mod.rs  policy.rs  renderer.rs
crates/rquery-postgres/: Cargo.toml
crates/rquery-postgres/src/: lib.rs
crates/rquery-postgres/tests/: ddl.rs  dml.rs  dql.rs  integration_ddl.rs  integration_ddl_ignored_features.rs  integration_dml.rs  integration_dml_ignored_features.rs  integration_dml_unsupported_features.rs  integration_dql.rs  integration_dql_ignored_features.rs  integration_dql_unsupported_features.rs  integration_tcl.rs  integration_tcl_ignored_features.rs  integration_tcl_unsupported_features.rs  tcl.rs
crates/rquery-sqlite/: Cargo.toml
crates/rquery-sqlite/src/: lib.rs
crates/rquery-sqlite/tests/: ddl.rs  dml.rs  dql.rs  integration_ddl.rs  integration_ddl_ignored_features.rs  integration_ddl_unsupported_features.rs  integration_dml.rs  integration_dml_ignored_features.rs  integration_dml_unsupported_features.rs  integration_dql.rs  integration_dql_ignored_features.rs  integration_dql_unsupported_features.rs  integration_tcl.rs  integration_tcl_ignored_features.rs  integration_tcl_unsupported_features.rs  tcl.rs
crates/rquery/src/: lib.rs
docs/: architecture.md  benchmarks.md  convenience-api-plan.md  ddl-syntax-reference.md  dml-ast-redesign-notes.md  dml-syntax-reference.md  dql-syntax-reference.md  dql-unsupported-policy.md  extensibility-design.md  extensibility.md  getting-started.md  insert-update-delete.md  integration-testing-plan.md  multi-dialect.md  parameterized-queries.md  schema-management.md  select-queries.md  tcl-syntax-reference.md  transactions.md  type-reference.md  unsupported-features-policy.md
docs/superpowers/plans/: 2026-07-03-binaryop-power-xor.md  2026-07-06-isnull-value-driven.md
docs/superpowers/specs/: 2026-07-02-value-output-type-coercion-design.md  2026-07-03-binaryop-power-xor-design.md  2026-07-06-isnull-value-driven-design.md
