[workspace]
resolver = "3"
members = [
    "crates/qcraft",
    "crates/qcraft-core",
    "crates/qcraft-postgres",
    "crates/qcraft-sqlite",
    "crates/qcraft-bench",
]

[workspace.package]
version = "2.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/emilt27/qcraft"
keywords = ["sql", "query-builder", "postgresql", "sqlite", "ast"]
categories = ["database"]
readme = "README.md"

[workspace.dependencies]
qcraft-core = { path = "crates/qcraft-core", version = "2.3.0" }
qcraft-postgres = { path = "crates/qcraft-postgres", version = "2.3.0" }
qcraft-sqlite = { path = "crates/qcraft-sqlite", version = "2.3.0" }
thiserror = "2"
