[package]
name = "qcraft-postgres"
description = "PostgreSQL renderer for qcraft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
qcraft-core = { workspace = true }

[dev-dependencies]
postgres = "0.19"
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
