[package]
name = "qcraft-sqlite"
description = "SQLite renderer for qcraft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
qcraft-core = { workspace = true }

[dev-dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
