[package]
name = "rquery-postgres"
description = "PostgreSQL renderer for rquery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rquery-core = { workspace = true }

[dev-dependencies]
postgres = "0.19"
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
