[package]
name = "rquery-sqlite"
description = "SQLite renderer for rquery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rquery-core = { workspace = true }

[dev-dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
