[package]
name = "rquery"
description = "Universal, extensible query builder for SQL databases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rquery-core = { workspace = true }

[features]
default = ["postgres", "sqlite"]
postgres = ["dep:rquery-postgres"]
sqlite = ["dep:rquery-sqlite"]

[dependencies.rquery-postgres]
workspace = true
optional = true

[dependencies.rquery-sqlite]
workspace = true
optional = true
